--- a/dodgeball-tracker-web/Gemfile
+++ b/dodgeball-tracker-web/Gemfile
@@ -47,6 +47,7 @@ gem 'bootsnap', require: false
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
   gem 'debug', platforms: %i[mri windows]
+  gem 'factory_bot_rails' # Latest stable version as of Dec 30, 2023
   gem 'rspec-rails', '~> 6.1.0' # Latest stable version as of Nov. 2023
 end
 
