--- a/dodgeball-tracker-web/Gemfile
+++ b/dodgeball-tracker-web/Gemfile
@@ -44,6 +44,8 @@ gem 'bootsnap', require: false
 # Use Active Storage variants [https://guides.rubyonrails.org/active_storage_overview.html#transforming-images]
 # gem "image_processing", "~> 1.2"
 
+gem 'graphql'
+
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
   gem 'debug', platforms: %i[mri windows]
@@ -52,6 +54,7 @@ group :development, :test do
 end
 
 group :development do
+  gem 'graphiql-rails'
   gem 'rubocop', require: false
   # Use console on exceptions pages [https://github.com/rails/web-console]
   gem 'web-console'
