--- a/dodgeball-tracker-mobile/package.json
+++ b/dodgeball-tracker-mobile/package.json
@@ -9,8 +9,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@apollo/client": "^3.9.5",
     "expo": "~50.0.7",
     "expo-status-bar": "~1.11.1",
+    "graphql": "^16.8.1",
     "react": "18.2.0",
     "react-native": "0.73.4"
   },
