--- a/dodgeball-tracker-web/Gemfile
+++ b/dodgeball-tracker-web/Gemfile
@@ -44,8 +44,11 @@ gem 'bootsnap', require: false
 # Use Active Storage variants [https://guides.rubyonrails.org/active_storage_overview.html#transforming-images]
 # gem "image_processing", "~> 1.2"
 
-# Ruby implementation of GraphQL 
+# Ruby implementation of GraphQL
 gem 'graphql'
+
+# Flexible authentication solution for Rails with Warden.
+gem 'devise'
 
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
