--- a/dodgeball-tracker-mobile/package.json
+++ b/dodgeball-tracker-mobile/package.json
@@ -33,6 +33,7 @@
     "@typescript-eslint/parser": "^7.0.2",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "typescript": "^5.4.4"
   },
   "private": true
